@@ -8,17 +8,21 @@ import com.soccialy.backend.entity.User;
 import com.soccialy.backend.mapper.UserMapper;
 import com.soccialy.backend.repository.FilterRepository;
 import com.soccialy.backend.repository.UserRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(UserService.class);
     private static final String USER_NOT_FOUND_WITH_ID = "User not found with id: ";
+
     @Autowired
     private UserRepository userRepository;
 
@@ -31,7 +35,7 @@ public class UserService {
     public List<UserDTO> findAllUsers() {
         return userRepository.findAll().stream()
                 .map(userMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserDTO findUserById(Integer id) {
@@ -64,13 +68,19 @@ public class UserService {
         if (updateDTO.getEmail() != null) {
             user.setEmail(updateDTO.getEmail());
         }
+
         if (updateDTO.getBio() != null) {
             user.setBio(updateDTO.getBio());
         }
+
         if (updateDTO.getFilterIds() != null) {
             Set<Filter> filters =
                     new HashSet<>(filterRepository.findAllById(updateDTO.getFilterIds()));
             user.setFilters(filters);
+            LOGGER.info("Saved filters for user {}: {}", user.getUsername(),
+                    filters.stream()
+                            .map(filter -> filter.getId() + ":" + filter.getName())
+                            .toList());
         }
 
         User saved = userRepository.save(user);
@@ -87,7 +97,7 @@ public class UserService {
                     dto.setName(f.getName());
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserDTO saveUser(UserDTO userDTO) {
@@ -99,7 +109,7 @@ public class UserService {
     public List<Integer> getUserProfileFilters(Integer userId) {
         return getUserFilters(userId).stream()
                 .map(FilterDTO::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public com.soccialy.backend.entity.Coordinates getUserCoordinates(Integer userId) {
@@ -108,5 +118,4 @@ public class UserService {
         coords.setLongitude(25.0);
         return coords;
     }
-
 }
